--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,15 @@
     <!--styles-->
 </head>
 <body>
-    <div class="nav-bar container">
+    <div class="nav-bar nav-top container">
         <ul>
             <li><a href="/#/"><i class="fa fa-home" aria-hidden="true"></i></a></li>
             <li><a href="https://www.google.com" target="_blank"><i class="fa fa-google" aria-hidden="true"></i></a></li>
         </ul>
     </div>
-    <div class="container" ng-view></div>
+    <div class="container content" ng-view></div>
     <footer>
-        <div class="nav-bar container">
+        <div class="nav-bar">
             <ul>
                 <li>Oleg</li>
                 <li><a href="https://github.com/kuwkuw/angular-browserify-seed">Fork</a></li>
